tdf#148481 Map RefHand cursor to Qt::PointingHand

Change-Id: I79c7008655f22737f92a4a6430f1380e81c1c386
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132833
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 9ae398054833120df36bf51738cc4cfd7efb3fdc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132713
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>